Make the project compile
Change-Id: Idc6c84ab2419f9a09ed71be04793e3d0e99988fb

--- a/solr/solr-ref-guide/build.gradle
+++ b/solr/solr-ref-guide/build.gradle
@@ -45,7 +45,7 @@
    tools gradleApi()
    tools localGroovy()
 
-//   tools ('org.asciidoctor:asciidoctor-ant')
+   tools ('org.asciidoctor:asciidoctorj:1.6.1')
    tools ('com.vaadin.external.google:android-json')
    tools ('org.jsoup:jsoup')
    tools ('org.apache.pdfbox:pdfbox')
